--- a/my-project-client/src/App.css
+++ b/my-project-client/src/App.css
@@ -1,22 +1,172 @@
 .App {
   text-align: center;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+.Login {
+  text-align: center;
+  position: relative;
+  top: 100px;
+  left: 20px;
+}
+.match-form {
+  text-align: center;
+  position: relative;
+  top: 50px;
+  left: 20px;
+}
+.WolfSelection {
+  text-align: center;
+  position: relative;
+
+  top: 20px;
+  left: 20px;
+}
+/* .PlayerCardContainer {
+  text-align: center;
+  position: relative;
+
+  top: 50px;
+  left: 50px;
+} */
+.MatchSummary {
+  position: relative;
+  top: 50px;
+  left: 20px;
+}
+.PlayerCard {
+  box-sizing: border-box;
+  border-radius: 25px;
+  width: 100%;
+  border: solid black 1px;
+  padding: 5px;
+}
+.HomeButtons {
+  box-sizing: border-box;
+  border-radius: 15px;
+  width: 100%;
+  border: solid black 1px;
+  padding: 5px;
+}
+.Beginning {
+  text-align: center;
+
+  position: relative;
+  top: 50px;
+  left: 20px;
+}
+table {
+  width: 100%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+th,
+td {
+  padding: 15px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+.MidRound {
+  text-align: center;
+  position: relative;
+  top: 50px;
+  left: 20px;
+}
+.FormInput {
+  width: 60%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+  text-align: left;
+}
+
+.WolfButtons {
+  /* display: block; */
+  width: 80px;
+  height: 80px;
+  line-height: 80px;
+  border: 2px solid #f5f5f5;
+  border-radius: 50%;
+  color: #f5f5f5;
+  text-align: center;
+  text-decoration: none;
+  background: #555777;
+  box-shadow: 0 0 3px gray;
+  font-size: 14px;
+  font-family: "Barlow Condensed", sans-serif;
+}
+.WolfButtons:hover {
+  background: #777555;
+}
+
+.backbutton {
+  position: relative;
+  top: 5px;
+}
+
+.score-form {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+  position: relative;
+  top: 50px;
+}
+.ScoreFormInput {
+  /* position: relative;
+  top: 20px; */
+  width: 70%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+  text-align: left;
+}
+.label {
+  position: relative;
+  right: 10px;
+}
+
+.OrderGenerator {
+  text-align: center;
+  position: relative;
+  top: 50px;
+}
+.HomeView {
+  position: relative;
+  top: 50px;
+  left: 20px;
+}
+.imgcontainer {
+  text-align: center;
+  margin: 24px 0 12px 0;
+}
+.WolfLogo {
+  width: 50%;
+  border-radius: 40%;
 }
 
 .App-header {
-  background-color: #282c34;
+  /* background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: top;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: white; */
+  text-align: center;
+  position: relative;
+  top: 20px;
+  left: 20px;
 }
 
 .App-link {
