--- a/my-project-client/src/index.css
+++ b/my-project-client/src/index.css
@@ -1,10 +1,10 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Russo One", sans-serif;
+  font-family: "Cinzel", serif;
+  /* font-family: "Barlow Condensed", sans-serif; */
+  /* font-family: "Cormorant Garamond", serif; */
+  /* font-family: "Fira Sans Extra Condensed", sans-serif; */
 }
 
 code {
