fri afternoon save

--- a/my-project-client/src/index.css
+++ b/my-project-client/src/index.css
@@ -5,6 +5,7 @@ body {
   /* font-family: "Barlow Condensed", sans-serif; */
   /* font-family: "Cormorant Garamond", serif; */
   /* font-family: "Fira Sans Extra Condensed", sans-serif; */
+  background-color: #59aacb;
 }
 
 code {
