--- a/my-project-client/src/App.css
+++ b/my-project-client/src/App.css
@@ -2,7 +2,8 @@
   text-align: center;
   position: absolute;
   top: 20px;
-  left: 20px;
+  left: 10px;
+  width: 80%;
 }
 .Login {
   text-align: center;
@@ -20,7 +21,6 @@
   text-align: center;
   position: relative;
 
-  top: 20px;
   left: 20px;
 }
 /* .PlayerCardContainer {
@@ -35,12 +35,48 @@
   top: 50px;
   left: 20px;
 }
-.PlayerCard {
+.normalPlayerCard {
   box-sizing: border-box;
   border-radius: 25px;
   width: 100%;
   border: solid black 1px;
+  padding: 10px;
+  position: relative;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  background-color: white;
+}
+
+.wolfCard {
+  box-sizing: border-box;
+  border-radius: 25px;
+  width: 100%;
+  border: solid black 1px;
+  padding: 10px;
+  font-size: 30px;
+  position: relative;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  background: linear-gradient(
+      rgba(255, 255, 255, 0.5),
+      rgba(255, 255, 255, 0.5)
+    ),
+    url("https://i.ibb.co/GtZjJdX/wolfeyes.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+.ViewMatchSummaryButton {
+  box-sizing: border-box;
+  border-radius: 5px;
+  width: 50%;
+  height: 20%;
   padding: 5px;
+  text-align: center;
+  position: relative;
+  top: 10px;
+  display: inline-block;
+  background-color: #f38a27;
 }
 .HomeButtons {
   box-sizing: border-box;
@@ -63,7 +99,7 @@ table {
 th,
 td {
   padding: 15px;
-  text-align: left;
+  text-align: center;
   border-bottom: 1px solid #ddd;
 }
 tr:nth-child(even) {
@@ -89,16 +125,23 @@ tr:nth-child(even) {
   /* display: block; */
   width: 80px;
   height: 80px;
-  line-height: 80px;
+  /* line-height: 80px; */
   border: 2px solid #f5f5f5;
   border-radius: 50%;
-  color: #f5f5f5;
+  color: black;
   text-align: center;
   text-decoration: none;
-  background: #555777;
+  background: linear-gradient(
+      rgba(255, 255, 255, 0.8),
+      rgba(255, 255, 255, 0.8)
+    ),
+    url("https://i.ibb.co/rtwCDxf/edited-Golf-Ball.png");
+
+  background-size: cover;
   box-shadow: 0 0 3px gray;
-  font-size: 14px;
+  font-size: 20px;
   font-family: "Barlow Condensed", sans-serif;
+  position: relative;
 }
 .WolfButtons:hover {
   background: #777555;
@@ -138,6 +181,7 @@ tr:nth-child(even) {
 .OrderGenerator {
   text-align: center;
   position: relative;
+  width: 100%;
   top: 50px;
 }
 .HomeView {
@@ -148,10 +192,11 @@ tr:nth-child(even) {
 .imgcontainer {
   text-align: center;
   margin: 24px 0 12px 0;
+  background-color: #59aacb;
 }
 .WolfLogo {
-  width: 50%;
-  border-radius: 40%;
+  width: 40%;
+  border-radius: 50%;
 }
 
 .App-header {
@@ -165,7 +210,7 @@ tr:nth-child(even) {
   color: white; */
   text-align: center;
   position: relative;
-  top: 20px;
+
   left: 20px;
 }
 
