--- a/my-project-client/src/App.css
+++ b/my-project-client/src/App.css
@@ -39,9 +39,10 @@
   box-sizing: border-box;
   border-radius: 25px;
   width: 100%;
-  border: solid black 1px;
+  border: solid #5cf80e 2px;
   padding: 10px;
   position: relative;
+  font-size: calc(20px + 5vmin);
   margin-top: 20px;
   margin-bottom: 10px;
   background-color: white;
@@ -53,7 +54,7 @@
   width: 100%;
   border: solid black 1px;
   padding: 10px;
-  font-size: 30px;
+  font-size: calc(30px + 5vmin);
   position: relative;
   margin-top: 20px;
   margin-bottom: 10px;
@@ -83,7 +84,13 @@
   border-radius: 15px;
   width: 100%;
   border: solid black 1px;
-  padding: 5px;
+  padding: 25px;
+  position: relative;
+  top: 20px;
+  font-size: 20px;
+  color: white;
+
+  background-color: #567b59;
 }
 .Beginning {
   text-align: center;
@@ -123,10 +130,10 @@ tr:nth-child(even) {
 
 .WolfButtons {
   /* display: block; */
-  width: 80px;
-  height: 80px;
+  width: 100px;
+  height: 100px;
   /* line-height: 80px; */
-  border: 2px solid #f5f5f5;
+  border: solid #5cf80e 2px;
   border-radius: 50%;
   color: black;
   text-align: center;
@@ -151,6 +158,10 @@ tr:nth-child(even) {
   position: relative;
   top: 5px;
 }
+.CreateAccountButton {
+  position: relative;
+  top: 100px;
+}
 
 .score-form {
   width: 100%;
@@ -170,12 +181,49 @@ tr:nth-child(even) {
   margin: 8px 0;
   display: inline-block;
   border: 1px solid #ccc;
+  border-radius: 5px;
   box-sizing: border-box;
   text-align: left;
 }
 .label {
   position: relative;
   right: 10px;
+}
+.arrow {
+  cursor: pointer;
+  display: inline-block;
+  height: 40px;
+  margin-left: 40px;
+  margin-right: 40px;
+  position: relative;
+  line-height: 2.5em;
+  padding-left: 1em;
+  padding-right: 2em;
+  background: white;
+  color: black;
+  after {
+    border-left: 20px solid white;
+  }
+}
+
+.arrow:after {
+  content: "";
+  position: absolute;
+  border-bottom: 20px solid transparent;
+  border-top: 20px solid transparent;
+  height: 0px;
+  width: 0px;
+  margin-right: -20px;
+  right: 0;
+}
+
+.arrow:hover,
+.arrow:active {
+  background: yellow;
+  color: black;
+  &:after {
+    trianglehoverborder-left: 20px solid yellow;
+  }
 }
 
 .OrderGenerator {
@@ -192,22 +240,22 @@ tr:nth-child(even) {
 .imgcontainer {
   text-align: center;
   margin: 24px 0 12px 0;
-  background-color: #59aacb;
+  background-color: #cad1c8;
 }
 .WolfLogo {
-  width: 40%;
+  width: 30%;
   border-radius: 50%;
 }
 
 .App-header {
-  /* background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: top;
+  /* background-color: #282c34; */
+  /* min-height: 100vh; */
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* align-items: center; */
+  /* justify-content: top; */
   font-size: calc(10px + 2vmin);
-  color: white; */
+  color: white;
   text-align: center;
   position: relative;
 
