--- a/my-project-client/src/index.css
+++ b/my-project-client/src/index.css
@@ -5,7 +5,7 @@ body {
   /* font-family: "Barlow Condensed", sans-serif; */
   /* font-family: "Cormorant Garamond", serif; */
   /* font-family: "Fira Sans Extra Condensed", sans-serif; */
-  background-color: #cad1c8;
+  background-color: #eeebe7;
 }
 
 code {
