--- a/my-project-client/src/App.css
+++ b/my-project-client/src/App.css
@@ -2,8 +2,8 @@
   text-align: center;
   position: absolute;
   top: 20px;
-  left: 10px;
-  width: 80%;
+  /* left: 10px; */
+  width: 100%;
 }
 .Login {
   text-align: center;
@@ -20,8 +20,6 @@
 .WolfSelection {
   text-align: center;
   position: relative;
-
-  left: 20px;
 }
 /* .PlayerCardContainer {
   text-align: center;
@@ -33,7 +31,8 @@
 .MatchSummary {
   position: relative;
   top: 50px;
-  left: 20px;
+
+  text-align: center;
 }
 .normalPlayerCard {
   box-sizing: border-box;
@@ -46,6 +45,20 @@
   margin-top: 20px;
   margin-bottom: 10px;
   background-color: #eeebe7;
+}
+
+.MatchListing {
+  /* box-sizing: border-box; */
+  border-radius: 10px;
+  border: solid black 2px;
+  width: 100%;
+  padding: 10px;
+  position: relative;
+  margin-top: 10px;
+  margin-bottom: 5px;
+  font-size: calc(12px + 2vmin);
+  text-align: center;
+  display: inline-block;
 }
 
 .wolfCard {
@@ -90,9 +103,10 @@
   top: 20px;
   font-size: 20px;
   color: white;
-
+  display: inline-block;
   background-color: #567b59;
 }
+
 .Beginning {
   text-align: center;
 
@@ -103,6 +117,7 @@
 table {
   width: 100%;
   border: solid black 1px;
+  position: relative;
 }
 tr {
   border-bottom: 1px solid grey;
@@ -127,8 +142,8 @@ tr:nth-child(even) {
 .MidRound {
   text-align: center;
   position: relative;
-  top: 50px;
-  left: 20px;
+  /* top: 50px; */
+  /* left: 20px; */
 }
 .FormInput {
   width: 60%;
@@ -166,6 +181,114 @@ tr:nth-child(even) {
   background: #777555;
 }
 
+.ScoreButtons {
+  /* display: block; */
+  width: 60px;
+  height: 60px;
+  /* line-height: 80px; */
+  border: solid #5cf80e 1px;
+  border-radius: 50%;
+  color: black;
+  text-align: center;
+  text-decoration: none;
+  background: linear-gradient(
+      rgba(255, 255, 255, 0.8),
+      rgba(255, 255, 255, 0.8)
+    ),
+    url("https://i.ibb.co/rtwCDxf/edited-Golf-Ball.png");
+
+  background-size: cover;
+  /* box-shadow: 0 0 3px gray; */
+  font-size: 15px;
+  font-family: "Barlow Condensed", sans-serif;
+  position: relative;
+  margin-left: 5px;
+}
+.ScoreButtons:hover {
+  background: #777555;
+}
+
+.p2ScoreButtons {
+  /* display: block; */
+  width: 60px;
+  height: 60px;
+  /* line-height: 80px; */
+  border: solid #5cf80e 1px;
+  border-radius: 50%;
+  color: black;
+  text-align: center;
+  text-decoration: none;
+  background: linear-gradient(
+      rgba(255, 255, 255, 0.8),
+      rgba(255, 255, 255, 0.8)
+    ),
+    url("https://i.ibb.co/rtwCDxf/edited-Golf-Ball.png");
+
+  background-size: cover;
+  /* box-shadow: 0 0 3px gray; */
+  font-size: 15px;
+  font-family: "Barlow Condensed", sans-serif;
+  position: relative;
+  margin-left: 5px;
+}
+.p2ScoreButtons:hover {
+  background: #777555;
+}
+
+.p3ScoreButtons {
+  /* display: block; */
+  width: 60px;
+  height: 60px;
+  /* line-height: 80px; */
+  border: solid #5cf80e 1px;
+  border-radius: 50%;
+  color: black;
+  text-align: center;
+  text-decoration: none;
+  background: linear-gradient(
+      rgba(255, 255, 255, 0.8),
+      rgba(255, 255, 255, 0.8)
+    ),
+    url("https://i.ibb.co/rtwCDxf/edited-Golf-Ball.png");
+
+  background-size: cover;
+  /* box-shadow: 0 0 3px gray; */
+  font-size: 15px;
+  font-family: "Barlow Condensed", sans-serif;
+  position: relative;
+  margin-left: 5px;
+}
+.p3ScoreButtons:hover {
+  background: #777555;
+}
+
+.p4ScoreButtons {
+  /* display: block; */
+  width: 60px;
+  height: 60px;
+  /* line-height: 80px; */
+  border: solid #5cf80e 1px;
+  border-radius: 50%;
+  color: black;
+  text-align: center;
+  text-decoration: none;
+  background: linear-gradient(
+      rgba(255, 255, 255, 0.8),
+      rgba(255, 255, 255, 0.8)
+    ),
+    url("https://i.ibb.co/rtwCDxf/edited-Golf-Ball.png");
+
+  background-size: cover;
+  /* box-shadow: 0 0 3px gray; */
+  font-size: 15px;
+  font-family: "Barlow Condensed", sans-serif;
+  position: relative;
+  margin-left: 5px;
+}
+.p4ScoreButtons:hover {
+  background: #777555;
+}
+
 .backbutton {
   position: relative;
   top: 5px;
@@ -180,15 +303,15 @@ tr:nth-child(even) {
   padding: 12px 20px;
   margin: 8px 0;
   display: inline-block;
-  border: 1px solid #ccc;
+  /* border: 1px solid #ccc; */
   box-sizing: border-box;
   position: relative;
-  top: 50px;
+  /* top: 10px; */
 }
 .ScoreFormInput {
   /* position: relative;
   top: 20px; */
-  width: 70%;
+  width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
   display: inline-block;
@@ -245,44 +368,101 @@ tr:nth-child(even) {
   top: 50px;
 }
 .HomeView {
-  position: relative;
-  top: 50px;
-  left: 20px;
+  /* position: relative;
+  top: 10px;
+  left: 20px; */
+  text-align: center;
 }
 .imgcontainer {
-  text-align: center;
-  margin: 24px 0 12px 0;
+  /* margin: 24px 0 12px 0; */
   background-color: #eeebe7;
+  /* display: inline-block; */
+  margin: auto;
 }
 .WolfLogo {
-  width: 30%;
+  width: 20%;
   border-radius: 50%;
+  /* display: inline-block; */
+}
+.homebutton {
+  /* box-sizing: border-box; */
+
+  border-radius: 15px;
+  /* width: 10%; */
+  border: solid black 1px;
+  padding: 5px;
+  font-size: 15px;
+  float: right;
+  position: relative;
+  top: 20px;
+  /* position: relative;
+  left: 20px; */
+
+  color: black;
+}
+.rulesbutton {
+  /* box-sizing: border-box; */
+
+  border-radius: 15px;
+  /* width: 10%; */
+  border: solid black 1px;
+  padding: 5px;
+  font-size: 15px;
+  float: left;
+
+  /* position: relative;
+  left: 20px; */
+  position: relative;
+  top: 20px;
+  color: black;
+}
+.playerScoreContainer {
+  border: solid black 1px;
+  padding-top: 2px;
+  padding-bottom: 2px;
 }
 
 .App-header {
   /* background-color: #282c34; */
   /* min-height: 100vh; */
   /* display: flex; */
-  /* flex-direction: column; */
-  /* align-items: center; */
+  /* box-sizing: border-box; */
+
   /* justify-content: top; */
-  font-size: calc(10px + 2vmin);
-  color: white;
+  /* margin: auto; */
+  /* font-size: calc(10px + 2vmin); */
+  /* color: white; */
   text-align: center;
   position: relative;
-
-  left: 20px;
+  /* left: 20px; */
 }
 
-.App-link {
-  color: #61dafb;
+.butn {
+  background: #3498db;
+  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+  background-image: -o-linear-gradient(top, #3498db, #2980b9);
+  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  -webkit-border-radius: 9;
+  -moz-border-radius: 9;
+  border-radius: 9px;
+  -webkit-box-shadow: 0px 1px 3px #666666;
+  -moz-box-shadow: 0px 1px 3px #666666;
+  box-shadow: 0px 1px 3px #666666;
+  font-family: Georgia;
+  color: #ffffff;
+  font-size: 19px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.butn:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
 }
