--- a/my-project-client/src/App.css
+++ b/my-project-client/src/App.css
@@ -14,8 +14,6 @@
 .match-form {
   text-align: center;
   position: relative;
-  top: 50px;
-  left: 20px;
 }
 .WolfSelection {
   text-align: center;
@@ -38,20 +36,29 @@
   box-sizing: border-box;
   border-radius: 25px;
   width: 100%;
-  border: solid #5cf80e 2px;
+  border: solid black 1px;
   padding: 10px;
   position: relative;
   font-size: calc(20px + 5vmin);
   margin-top: 20px;
   margin-bottom: 10px;
-  background-color: #eeebe7;
+
+  background-image: -webkit-linear-gradient(top, #1e953b, #8ce347);
+  background-image: -moz-linear-gradient(top, #1e953b, #8ce347);
+  background-image: -ms-linear-gradient(top, #76fd96, #8ce347);
+  background-image: -o-linear-gradient(top, #76fd96, #8ce347);
+  background-image: linear-gradient(to bottom, #cda91b, #fbda5b);
+  -webkit-box-shadow: 0px 1px 3px #666666;
+  -moz-box-shadow: 0px 1px 3px #666666;
+  box-shadow: 0px 1px 3px #666666;
+  font-family: "Cinzel", serif;
 }
 
 .MatchListing {
   /* box-sizing: border-box; */
   border-radius: 10px;
   border: solid black 2px;
-  width: 100%;
+  width: 90%;
   padding: 10px;
   position: relative;
   margin-top: 10px;
@@ -59,15 +66,16 @@
   font-size: calc(12px + 2vmin);
   text-align: center;
   display: inline-block;
+  background-color: white;
 }
 
 .wolfCard {
   box-sizing: border-box;
   border-radius: 25px;
   width: 100%;
-  border: solid red 2px;
-  padding: 10px;
-  font-size: calc(30px + 5vmin);
+  border: solid red 1px;
+  padding: 5px;
+  font-size: calc(28px + 5vmin);
 
   position: relative;
   margin-top: 20px;
@@ -79,6 +87,7 @@
     url("https://i.ibb.co/GtZjJdX/wolfeyes.jpg");
   background-size: cover;
   background-position: center;
+  font-family: "Nosifer", cursive;
 }
 
 .ViewMatchSummaryButton {
@@ -89,22 +98,53 @@
   padding: 5px;
   text-align: center;
   position: relative;
-  top: 10px;
+  top: 20px;
   display: inline-block;
+  background-image: -webkit-linear-gradient(top, #85ae65, #8ce347);
+  background-image: -moz-linear-gradient(top, #85ae65, #8ce347);
+  background-image: -ms-linear-gradient(top, #85ae65, #8ce347);
+  background-image: -o-linear-gradient(top, #85ae65, #8ce347);
+  background-image: linear-gradient(to bottom, #85ae65, #8ce347);
+  -webkit-box-shadow: 0px 1px 3px #666666;
+  -moz-box-shadow: 0px 1px 3px #666666;
+  box-shadow: 0px 1px 3px #666666;
+}
+
+.ViewMatchDetailsButton {
+  box-sizing: border-box;
+  border-radius: 5px;
+  width: 80%;
+  height: 30%;
+  padding: 10px;
+  text-align: center;
+  position: relative;
+  top: 20px;
+  font-size: calc(20px + 2vmin);
+
+  display: inline-block;
+
   background-color: #f38a27;
 }
 .HomeButtons {
   box-sizing: border-box;
   border-radius: 15px;
-  width: 100%;
+  width: 90%;
   border: solid black 1px;
-  padding: 25px;
+  padding: 10px;
   position: relative;
-  top: 20px;
-  font-size: 20px;
-  color: white;
+  top: 75px;
+  font-size: calc(30px + 2vmin);
+  color: #0c1d10;
   display: inline-block;
-  background-color: #567b59;
+  background: #7ade2c;
+  background-image: -webkit-linear-gradient(top, #85ae65, #8ce347);
+  background-image: -moz-linear-gradient(top, #85ae65, #8ce347);
+  background-image: -ms-linear-gradient(top, #85ae65, #8ce347);
+  background-image: -o-linear-gradient(top, #85ae65, #8ce347);
+  background-image: linear-gradient(to bottom, #85ae65, #8ce347);
+  margin-bottom: 50px;
+  -webkit-box-shadow: 0px 1px 3px #666666;
+  -moz-box-shadow: 0px 1px 3px #666666;
 }
 
 .Beginning {
@@ -112,8 +152,8 @@
 
   position: relative;
   top: 50px;
-  left: 20px;
 }
+
 table {
   width: 100%;
   border: solid black 1px;
@@ -122,19 +162,24 @@ table {
 tr {
   border-bottom: 1px solid grey;
   border-right: 1px solid grey;
+  font-size: 16px;
 }
 
 th {
   background-color: #dad7d2;
   border-bottom: 1px solid grey;
   border-right: 1px solid grey;
+  font-size: 16px;
 }
 
 td {
-  padding: 15px;
+  padding: 5px;
   text-align: center;
   border-bottom: 1px solid grey;
   border-right: 1px solid grey;
+  font-family: "Gloria Hallelujah", cursive;
+  font-family: "Rock Salt", cursive;
+  font-size: 16px;
 }
 tr:nth-child(even) {
   background-color: #d2e0c7;
@@ -147,12 +192,15 @@ tr:nth-child(even) {
 }
 .FormInput {
   width: 60%;
+  height: 20%;
   padding: 12px 20px;
   margin: 8px 0;
   display: inline-block;
   border: 1px solid #ccc;
   box-sizing: border-box;
   text-align: left;
+  line-height: 40px;
+  font-size: 17px;
 }
 
 .WolfButtons {
@@ -160,22 +208,35 @@ tr:nth-child(even) {
   width: 100px;
   height: 100px;
   /* line-height: 80px; */
-  border: solid #5cf80e 2px;
-  border-radius: 50%;
-  color: black;
+  border: solid black 1px;
+  border-radius: 10%;
+  padding: 3px;
+  margin-left: 5px;
+  margin-right: 5px;
   text-align: center;
   text-decoration: none;
   background: linear-gradient(
-      rgba(255, 255, 255, 0.8),
-      rgba(255, 255, 255, 0.8)
+      rgba(255, 255, 255, 0.5),
+      rgba(255, 255, 255, 0.5)
     ),
-    url("https://i.ibb.co/rtwCDxf/edited-Golf-Ball.png");
+    url("https://i.ebayimg.com/images/g/zEAAAOSwj75Za43n/s-l300.jpg");
 
   background-size: cover;
-  /* box-shadow: 0 0 3px gray; */
-  font-size: 20px;
-  font-family: "Barlow Condensed", sans-serif;
+  -webkit-box-shadow: 0px 1px 3px #666666;
+  -moz-box-shadow: 0px 1px 3px #666666;
+  box-shadow: 0px 1px 3px #666666;
+  font-size: 16px;
+  font-family: "Russo One", sans-serif;
+  font-family: "Cinzel", serif;
+
+  /* font-family: "Junge", serif; */
+
+  /* font-family: "Carrois Gothic SC", sans-serif; */
+  /* font-family: "Rubik Mono One", sans-serif; */
+  font-family: "Nosifer", cursive;
+  /* font-family: "Old Standard TT", serif; */
   position: relative;
+  top: 10px;
 }
 .WolfButtons:hover {
   background: #777555;
@@ -186,26 +247,49 @@ tr:nth-child(even) {
   width: 60px;
   height: 60px;
   /* line-height: 80px; */
-  border: solid #5cf80e 1px;
+  border: solid black 1px;
   border-radius: 50%;
   color: black;
   text-align: center;
   text-decoration: none;
-  background: linear-gradient(
+  background: rgba(255, 255, 255, 0.5);
+  /* background: linear-gradient(
       rgba(255, 255, 255, 0.8),
       rgba(255, 255, 255, 0.8)
     ),
-    url("https://i.ibb.co/rtwCDxf/edited-Golf-Ball.png");
+    url("https://i.ibb.co/rtwCDxf/edited-Golf-Ball.png"); */
 
   background-size: cover;
   /* box-shadow: 0 0 3px gray; */
-  font-size: 15px;
-  font-family: "Barlow Condensed", sans-serif;
+  font-size: 30px;
+  font-family: "Permanent Marker", cursive;
+  /* font-family: "IBM Plex Sans", sans-serif; */
+  /* font-family: "Alfa Slab One", cursive; */
+  /* font-family: "Gloria Hallelujah", cursive; */
+  /* font-family: "Nanum Myeongjo", serif; */
   position: relative;
   margin-left: 5px;
+  z-index: 1;
 }
 .ScoreButtons:hover {
   background: #777555;
+}
+.BackgroundText {
+  z-index: -1;
+  font-size: calc(40px + 10vmin);
+  font-family: "Sigmar One", cursive;
+  /* font-family: "Audiowide", cursive; */
+  /* font-family: "Enriqueta", serif; */
+  /* font-family: "Cousine", monospace; */
+  /* font-family: "Unna", serif; */
+
+  /* font-family: "Sigmar One", cursive; */
+  /* font-family: "Russo One", sans-serif; */
+  display: inline-block;
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  color: #cda91b;
 }
 
 .p2ScoreButtons {
@@ -213,23 +297,26 @@ tr:nth-child(even) {
   width: 60px;
   height: 60px;
   /* line-height: 80px; */
-  border: solid #5cf80e 1px;
+  border: solid black 1px;
+
   border-radius: 50%;
   color: black;
   text-align: center;
   text-decoration: none;
-  background: linear-gradient(
+  background: rgba(255, 255, 255, 0.5);
+  /* background-image: linear-gradient(
       rgba(255, 255, 255, 0.8),
       rgba(255, 255, 255, 0.8)
     ),
-    url("https://i.ibb.co/rtwCDxf/edited-Golf-Ball.png");
+    url("https://i.ibb.co/rtwCDxf/edited-Golf-Ball.png"); */
 
   background-size: cover;
   /* box-shadow: 0 0 3px gray; */
-  font-size: 15px;
-  font-family: "Barlow Condensed", sans-serif;
+  font-size: 30px;
+  font-family: "Permanent Marker", cursive;
   position: relative;
   margin-left: 5px;
+  z-index: 1;
 }
 .p2ScoreButtons:hover {
   background: #777555;
@@ -240,23 +327,26 @@ tr:nth-child(even) {
   width: 60px;
   height: 60px;
   /* line-height: 80px; */
-  border: solid #5cf80e 1px;
+  border: solid black 1px;
+
   border-radius: 50%;
   color: black;
   text-align: center;
   text-decoration: none;
-  background: linear-gradient(
+  background: rgba(255, 255, 255, 0.5);
+  /* background-image: linear-gradient(
       rgba(255, 255, 255, 0.8),
       rgba(255, 255, 255, 0.8)
     ),
-    url("https://i.ibb.co/rtwCDxf/edited-Golf-Ball.png");
+    url("https://i.ibb.co/rtwCDxf/edited-Golf-Ball.png"); */
 
   background-size: cover;
   /* box-shadow: 0 0 3px gray; */
-  font-size: 15px;
-  font-family: "Barlow Condensed", sans-serif;
+  font-size: 30px;
+  font-family: "Permanent Marker", cursive;
   position: relative;
   margin-left: 5px;
+  z-index: 1;
 }
 .p3ScoreButtons:hover {
   background: #777555;
@@ -267,23 +357,25 @@ tr:nth-child(even) {
   width: 60px;
   height: 60px;
   /* line-height: 80px; */
-  border: solid #5cf80e 1px;
+  border: solid black 1px;
   border-radius: 50%;
   color: black;
   text-align: center;
   text-decoration: none;
-  background: linear-gradient(
+  background: rgba(255, 255, 255, 0.5);
+  /* background: linear-gradient(
       rgba(255, 255, 255, 0.8),
       rgba(255, 255, 255, 0.8)
     ),
-    url("https://i.ibb.co/rtwCDxf/edited-Golf-Ball.png");
+    url("https://i.ibb.co/rtwCDxf/edited-Golf-Ball.png"); */
 
   background-size: cover;
   /* box-shadow: 0 0 3px gray; */
-  font-size: 15px;
-  font-family: "Barlow Condensed", sans-serif;
+  font-size: 30px;
+  font-family: "Permanent Marker", cursive;
   position: relative;
   margin-left: 5px;
+  z-index: 1;
 }
 .p4ScoreButtons:hover {
   background: #777555;
@@ -306,6 +398,7 @@ tr:nth-child(even) {
   /* border: 1px solid #ccc; */
   box-sizing: border-box;
   position: relative;
+  text-align: center;
   /* top: 10px; */
 }
 .ScoreFormInput {
@@ -318,7 +411,7 @@ tr:nth-child(even) {
   border: 1px solid #ccc;
   border-radius: 5px;
   box-sizing: border-box;
-  text-align: left;
+  text-align: center;
 }
 .label {
   position: relative;
@@ -331,34 +424,18 @@ tr:nth-child(even) {
   margin-left: 40px;
   margin-right: 40px;
   position: relative;
-  line-height: 2.5em;
-  padding-left: 1em;
-  padding-right: 2em;
-  background: white;
-  color: black;
-  after {
-    border-left: 20px solid white;
-  }
-}
 
-.arrow:after {
-  content: "";
-  position: absolute;
-  border-bottom: 20px solid transparent;
-  border-top: 20px solid transparent;
-  height: 0px;
-  width: 0px;
-  margin-right: -20px;
-  right: 0;
-}
-
-.arrow:hover,
-.arrow:active {
-  background: yellow;
+  font-family: "Old Standard TT", serif;
   color: black;
-  &:after {
-    trianglehoverborder-left: 20px solid yellow;
-  }
+  font-size: 20px;
+  background-image: -webkit-linear-gradient(top, #85ae65, #8ce347);
+  background-image: -moz-linear-gradient(top, #85ae65, #8ce347);
+  background-image: -ms-linear-gradient(top, #85ae65, #8ce347);
+  background-image: -o-linear-gradient(top, #85ae65, #8ce347);
+  background-image: linear-gradient(to bottom, #85ae65, #8ce347);
+  -webkit-box-shadow: 0px 1px 3px #666666;
+  -moz-box-shadow: 0px 1px 3px #666666;
+  box-shadow: 0px 1px 3px #666666;
 }
 
 .OrderGenerator {
@@ -380,21 +457,55 @@ tr:nth-child(even) {
   margin: auto;
 }
 .WolfLogo {
-  width: 20%;
+  width: 25%;
   border-radius: 50%;
   /* display: inline-block; */
 }
 .homebutton {
   /* box-sizing: border-box; */
-
+  color: #0c1d10;
   border-radius: 15px;
   /* width: 10%; */
   border: solid black 1px;
   padding: 5px;
-  font-size: 15px;
+  font-size: calc(20px + 2vmin);
   float: right;
   position: relative;
   top: 20px;
+  background-image: -webkit-linear-gradient(top, #85ae65, #8ce347);
+  background-image: -moz-linear-gradient(top, #85ae65, #8ce347);
+  background-image: -ms-linear-gradient(top, #85ae65, #8ce347);
+  background-image: -o-linear-gradient(top, #85ae65, #8ce347);
+  background-image: linear-gradient(to bottom, #85ae65, #8ce347);
+  margin-bottom: 50px;
+  -webkit-box-shadow: 0px 1px 3px #666666;
+  -moz-box-shadow: 0px 1px 3px #666666;
+  box-shadow: 0px 1px 3px #666666;
+  /* position: relative;
+  left: 20px; */
+
+  color: black;
+}
+input[type="submit"] {
+  /* box-sizing: border-box; */
+  color: #0c1d10;
+  border-radius: 15px;
+  /* width: 10%; */
+  border: solid black 1px;
+  padding: 5px;
+  font-size: calc(20px + 2vmin);
+  font-family: "Old Standard TT", serif;
+  position: relative;
+  top: 20px;
+  background-image: -webkit-linear-gradient(top, #85ae65, #8ce347);
+  background-image: -moz-linear-gradient(top, #85ae65, #8ce347);
+  background-image: -ms-linear-gradient(top, #85ae65, #8ce347);
+  background-image: -o-linear-gradient(top, #85ae65, #8ce347);
+  background-image: linear-gradient(to bottom, #85ae65, #8ce347);
+  margin-bottom: 50px;
+  -webkit-box-shadow: 0px 1px 3px #666666;
+  -moz-box-shadow: 0px 1px 3px #666666;
+  box-shadow: 0px 1px 3px #666666;
   /* position: relative;
   left: 20px; */
 
@@ -407,7 +518,7 @@ tr:nth-child(even) {
   /* width: 10%; */
   border: solid black 1px;
   padding: 5px;
-  font-size: 15px;
+  font-size: calc(20px + 2vmin);
   float: left;
 
   /* position: relative;
@@ -415,11 +526,43 @@ tr:nth-child(even) {
   position: relative;
   top: 20px;
   color: black;
+  background-image: -webkit-linear-gradient(top, #85ae65, #8ce347);
+  background-image: -moz-linear-gradient(top, #85ae65, #8ce347);
+  background-image: -ms-linear-gradient(top, #85ae65, #8ce347);
+  background-image: -o-linear-gradient(top, #85ae65, #8ce347);
+  background-image: linear-gradient(to bottom, #85ae65, #8ce347);
+  margin-bottom: 50px;
+  -webkit-box-shadow: 0px 1px 3px #666666;
+  -moz-box-shadow: 0px 1px 3px #666666;
 }
-.playerScoreContainer {
+.player1ScoreContainer {
   border: solid black 1px;
   padding-top: 2px;
   padding-bottom: 2px;
+  position: relative;
+  z-index: 1;
+  text-align: center;
+}
+.player2ScoreContainer {
+  border: solid black 1px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  position: relative;
+  z-index: 1;
+}
+.player3ScoreContainer {
+  border: solid black 1px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  position: relative;
+  z-index: 1;
+}
+.player4ScoreContainer {
+  border: solid black 1px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  position: relative;
+  z-index: 1;
 }
 
 .App-header {
@@ -455,6 +598,9 @@ tr:nth-child(even) {
   font-size: 19px;
   padding: 10px 20px 10px 20px;
   text-decoration: none;
+  position: relative;
+  display: inline-block;
+  top: 50px;
 }
 
 .butn:hover {
