--- a/my-project-client/src/App.css
+++ b/my-project-client/src/App.css
@@ -36,22 +36,19 @@
   box-sizing: border-box;
   border-radius: 25px;
   width: 100%;
-  border: solid black 1px;
+  border: solid #c7c7c7 1px;
   padding: 10px;
   position: relative;
   font-size: calc(20px + 5vmin);
   margin-top: 20px;
   margin-bottom: 10px;
+  color: #343434;
+  background-image: linear-gradient(to bottom, #d4b361, #f7e9c8);
+  background-color: #d4b361;
 
-  background-image: -webkit-linear-gradient(top, #1e953b, #8ce347);
-  background-image: -moz-linear-gradient(top, #1e953b, #8ce347);
-  background-image: -ms-linear-gradient(top, #76fd96, #8ce347);
-  background-image: -o-linear-gradient(top, #76fd96, #8ce347);
-  background-image: linear-gradient(to bottom, #cda91b, #fbda5b);
   -webkit-box-shadow: 0px 1px 3px #666666;
   -moz-box-shadow: 0px 1px 3px #666666;
   box-shadow: 0px 1px 3px #666666;
-  font-family: "Cinzel", serif;
 }
 
 .MatchListing {
@@ -66,17 +63,18 @@
   font-size: calc(12px + 2vmin);
   text-align: center;
   display: inline-block;
-  background-color: white;
+  background-image: linear-gradient(to bottom, #d4b361, #f7e9c8);
+  color: #343434;
 }
 
 .wolfCard {
   box-sizing: border-box;
   border-radius: 25px;
   width: 100%;
-  border: solid red 1px;
+  border: solid #c7c7c7 1px;
   padding: 5px;
   font-size: calc(28px + 5vmin);
-
+  color: #c03221;
   position: relative;
   margin-top: 20px;
   margin-bottom: 10px;
@@ -100,30 +98,30 @@
   position: relative;
   top: 20px;
   display: inline-block;
-  background-image: -webkit-linear-gradient(top, #85ae65, #8ce347);
-  background-image: -moz-linear-gradient(top, #85ae65, #8ce347);
-  background-image: -ms-linear-gradient(top, #85ae65, #8ce347);
-  background-image: -o-linear-gradient(top, #85ae65, #8ce347);
-  background-image: linear-gradient(to bottom, #85ae65, #8ce347);
+  background-image: -webkit-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: -moz-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: -ms-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: -o-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: linear-gradient(to bottom, #c9dcb3, #ebf2e3);
   -webkit-box-shadow: 0px 1px 3px #666666;
   -moz-box-shadow: 0px 1px 3px #666666;
   box-shadow: 0px 1px 3px #666666;
+  color: #343434;
 }
 
 .ViewMatchDetailsButton {
   box-sizing: border-box;
   border-radius: 5px;
-  width: 80%;
-  height: 30%;
+
   padding: 10px;
   text-align: center;
   position: relative;
   top: 20px;
-  font-size: calc(20px + 2vmin);
+  font-size: calc(16px + 2vmin);
 
   display: inline-block;
-
-  background-color: #f38a27;
+  border: solid #c7c7c7 1px;
+  background-color: #c03221;
 }
 .HomeButtons {
   box-sizing: border-box;
@@ -137,11 +135,13 @@
   color: #0c1d10;
   display: inline-block;
   background: #7ade2c;
-  background-image: -webkit-linear-gradient(top, #85ae65, #8ce347);
-  background-image: -moz-linear-gradient(top, #85ae65, #8ce347);
-  background-image: -ms-linear-gradient(top, #85ae65, #8ce347);
-  background-image: -o-linear-gradient(top, #85ae65, #8ce347);
-  background-image: linear-gradient(to bottom, #85ae65, #8ce347);
+  background-image: -webkit-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: -moz-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: -ms-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: -o-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: linear-gradient(to bottom, #c9dcb3, #ebf2e3);
+  background-color: #c9dcb3;
+
   margin-bottom: 50px;
   -webkit-box-shadow: 0px 1px 3px #666666;
   -moz-box-shadow: 0px 1px 3px #666666;
@@ -158,11 +158,12 @@ table {
   width: 100%;
   border: solid black 1px;
   position: relative;
+  color: #343434;
 }
 tr {
   border-bottom: 1px solid grey;
   border-right: 1px solid grey;
-  font-size: 16px;
+  font-size: 20px;
 }
 
 th {
@@ -179,11 +180,15 @@ td {
   border-right: 1px solid grey;
   font-family: "Gloria Hallelujah", cursive;
   font-family: "Rock Salt", cursive;
-  font-size: 16px;
+  font-size: 20px;
 }
 tr:nth-child(even) {
-  background-color: #d2e0c7;
+  background-color: #ebf2e3;
 }
+tr:nth-child(odd) {
+  background-color: #a2a2a2;
+}
+
 .MidRound {
   text-align: center;
   position: relative;
@@ -225,7 +230,7 @@ tr:nth-child(even) {
   -webkit-box-shadow: 0px 1px 3px #666666;
   -moz-box-shadow: 0px 1px 3px #666666;
   box-shadow: 0px 1px 3px #666666;
-  font-size: 16px;
+  font-size: 22px;
   font-family: "Russo One", sans-serif;
   font-family: "Cinzel", serif;
 
@@ -237,9 +242,13 @@ tr:nth-child(even) {
   /* font-family: "Old Standard TT", serif; */
   position: relative;
   top: 10px;
+  color: #c03221;
 }
 .WolfButtons:hover {
   background: #777555;
+}
+.Rules {
+  font-family: "Old Standard TT", serif;
 }
 
 .ScoreButtons {
@@ -276,8 +285,8 @@ tr:nth-child(even) {
 }
 .BackgroundText {
   z-index: -1;
-  font-size: calc(40px + 10vmin);
-  font-family: "Sigmar One", cursive;
+  font-size: calc(30px + 10vmin);
+  /* font-family: "Sigmar One", cursive; */
   /* font-family: "Audiowide", cursive; */
   /* font-family: "Enriqueta", serif; */
   /* font-family: "Cousine", monospace; */
@@ -286,10 +295,10 @@ tr:nth-child(even) {
   /* font-family: "Sigmar One", cursive; */
   /* font-family: "Russo One", sans-serif; */
   display: inline-block;
-  text-align: center;
+  /* text-align: center; */
   position: absolute;
   width: 100%;
-  color: #cda91b;
+  color: #c03221;
 }
 
 .p2ScoreButtons {
@@ -330,7 +339,7 @@ tr:nth-child(even) {
   border: solid black 1px;
 
   border-radius: 50%;
-  color: black;
+  color: #black;
   text-align: center;
   text-decoration: none;
   background: rgba(255, 255, 255, 0.5);
@@ -424,15 +433,14 @@ tr:nth-child(even) {
   margin-left: 40px;
   margin-right: 40px;
   position: relative;
-
-  font-family: "Old Standard TT", serif;
+  font-family: "Cinzel Decorative", cursive;
   color: black;
   font-size: 20px;
-  background-image: -webkit-linear-gradient(top, #85ae65, #8ce347);
-  background-image: -moz-linear-gradient(top, #85ae65, #8ce347);
-  background-image: -ms-linear-gradient(top, #85ae65, #8ce347);
-  background-image: -o-linear-gradient(top, #85ae65, #8ce347);
-  background-image: linear-gradient(to bottom, #85ae65, #8ce347);
+  background-image: -webkit-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: -moz-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: -ms-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: -o-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: linear-gradient(to bottom, #c9dcb3, #ebf2e3);
   -webkit-box-shadow: 0px 1px 3px #666666;
   -moz-box-shadow: 0px 1px 3px #666666;
   box-shadow: 0px 1px 3px #666666;
@@ -452,7 +460,7 @@ tr:nth-child(even) {
 }
 .imgcontainer {
   /* margin: 24px 0 12px 0; */
-  background-color: #eeebe7;
+
   /* display: inline-block; */
   margin: auto;
 }
@@ -472,11 +480,11 @@ tr:nth-child(even) {
   float: right;
   position: relative;
   top: 20px;
-  background-image: -webkit-linear-gradient(top, #85ae65, #8ce347);
-  background-image: -moz-linear-gradient(top, #85ae65, #8ce347);
-  background-image: -ms-linear-gradient(top, #85ae65, #8ce347);
-  background-image: -o-linear-gradient(top, #85ae65, #8ce347);
-  background-image: linear-gradient(to bottom, #85ae65, #8ce347);
+  background-image: -webkit-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: -moz-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: -ms-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: -o-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: linear-gradient(to bottom, #c9dcb3, #ebf2e3);
   margin-bottom: 50px;
   -webkit-box-shadow: 0px 1px 3px #666666;
   -moz-box-shadow: 0px 1px 3px #666666;
@@ -486,22 +494,23 @@ tr:nth-child(even) {
 
   color: black;
 }
+
 input[type="submit"] {
   /* box-sizing: border-box; */
   color: #0c1d10;
-  border-radius: 15px;
+  /* border-radius: 15px; */
   /* width: 10%; */
   border: solid black 1px;
   padding: 5px;
   font-size: calc(20px + 2vmin);
-  font-family: "Old Standard TT", serif;
+  font-family: "Cinzel Decorative", cursive;
   position: relative;
-  top: 20px;
-  background-image: -webkit-linear-gradient(top, #85ae65, #8ce347);
-  background-image: -moz-linear-gradient(top, #85ae65, #8ce347);
-  background-image: -ms-linear-gradient(top, #85ae65, #8ce347);
-  background-image: -o-linear-gradient(top, #85ae65, #8ce347);
-  background-image: linear-gradient(to bottom, #85ae65, #8ce347);
+  top: 5px;
+  background-image: -webkit-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: -moz-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: -ms-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: -o-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: linear-gradient(to bottom, #c9dcb3, #ebf2e3);
   margin-bottom: 50px;
   -webkit-box-shadow: 0px 1px 3px #666666;
   -moz-box-shadow: 0px 1px 3px #666666;
@@ -526,11 +535,11 @@ input[type="submit"] {
   position: relative;
   top: 20px;
   color: black;
-  background-image: -webkit-linear-gradient(top, #85ae65, #8ce347);
-  background-image: -moz-linear-gradient(top, #85ae65, #8ce347);
-  background-image: -ms-linear-gradient(top, #85ae65, #8ce347);
-  background-image: -o-linear-gradient(top, #85ae65, #8ce347);
-  background-image: linear-gradient(to bottom, #85ae65, #8ce347);
+  background-image: -webkit-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: -moz-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: -ms-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: -o-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: linear-gradient(to bottom, #c9dcb3, #ebf2e3);
   margin-bottom: 50px;
   -webkit-box-shadow: 0px 1px 3px #666666;
   -moz-box-shadow: 0px 1px 3px #666666;
@@ -541,7 +550,8 @@ input[type="submit"] {
   padding-bottom: 2px;
   position: relative;
   z-index: 1;
-  text-align: center;
+  text-align: left;
+  background-color: #a2a2a2;
 }
 .player2ScoreContainer {
   border: solid black 1px;
@@ -556,6 +566,7 @@ input[type="submit"] {
   padding-bottom: 2px;
   position: relative;
   z-index: 1;
+  text-align: left;
 }
 .player4ScoreContainer {
   border: solid black 1px;
@@ -581,26 +592,37 @@ input[type="submit"] {
 }
 
 .butn {
-  background: #3498db;
-  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
-  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
-  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
-  background-image: -o-linear-gradient(top, #3498db, #2980b9);
-  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  background-image: -webkit-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: -moz-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: -ms-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: -o-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: linear-gradient(to bottom, #c9dcb3, #ebf2e3);
   -webkit-border-radius: 9;
   -moz-border-radius: 9;
-  border-radius: 9px;
+  border-radius: 15px;
   -webkit-box-shadow: 0px 1px 3px #666666;
   -moz-box-shadow: 0px 1px 3px #666666;
   box-shadow: 0px 1px 3px #666666;
-  font-family: Georgia;
-  color: #ffffff;
+  font-family: "Cinzel Decorative", cursive;
+  border: solid black 1px;
   font-size: 19px;
   padding: 10px 20px 10px 20px;
   text-decoration: none;
   position: relative;
   display: inline-block;
   top: 50px;
+}
+.custom-select {
+  width: 200px;
+  height: calc(20px + 5vmin);
+  font-size: 20px;
+  font-family: "Old Standard TT", serif;
+  text-align: center;
+  background-image: -webkit-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: -moz-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: -ms-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: -o-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: linear-gradient(to bottom, #c9dcb3, #ebf2e3);
 }
 
 .butn:hover {
